--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "Camp.Fund",
+  "name": "Pine Lodge",
   "version": "1.0.0",
-  "description": "Camp.fund website (intro)",
+  "description": "Pine Lodge website",
   "main": "build/index.html",
   "author": "Justin Rosen",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-htmlmin": "^0.6.0",
-    "grunt-contrib-uglify": "^0.11.1"
+    "grunt-contrib-htmlmin": "^0.6.0"
   }
 }
